# vm-convert

./: Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: archive.rs  cli.rs  convert.rs  inventory.rs  libvirt_xml.rs  main.rs  manifest.rs  ova.rs  ovf.rs  platform.rs
