[package]
name = "vm-convert"
version = "0.2.0"
edition = "2021"
rust-version = "1.94"
description = "Convert VMware OVF/VMDK images to QEMU/KVM (libvirt) format"
authors = ["vm-convert contributors"]

[[bin]]
name = "vm-convert"
path = "src/main.rs"

[dependencies]
clap     = { version = "4",    features = ["derive"] }
anyhow   = "1"
thiserror = "2"
roxmltree = "0.21"
indicatif = "0.18"
which    = "8"

[dev-dependencies]
tempfile = "3"
