[package]
name = "vm-convert"
version = "0.3.4"
edition = "2021"
rust-version = "1.94"
description = "Convert VMware OVF/VMDK images to QEMU/KVM (libvirt) format"
authors = ["vm-convert contributors"]

[[bin]]
name = "vm-convert"
path = "src/main.rs"

[dependencies]
clap     = { version = "4",    features = ["derive"] }
anyhow   = "1"
thiserror = "2"
roxmltree = "0.21"
indicatif = "0.18"
which    = "8"
tar      = "0.4"
tempfile = "3"
sha1     = "0.11.0-rc.5"
sha2     = "0.11.0-rc.5"
digest   = "0.11"
flate2   = "1"
bzip2    = "0.6"
xz2      = "0.1"
zstd     = "0.13"
zip      = "8"
